// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectFilterComponent matches snapshot 1`] = `
<FieldSet
  className=""
  key="title"
  legend="title"
  legendSrOnly={true}
>
  <CheckBox
    _id={1}
    checkboxProps={Object {}}
    className="tm-checkbox-transparent"
    disabled={false}
    excludeTmCheckboxClass={false}
    id="checkboxdescription-filterType-1"
    key="checkboxdescription-filterType-1"
    label="description"
    labelSrOnly={false}
    name="description"
    onChange={[Function]}
    onCheckBoxClick={[Function]}
    overrideLifecycle={false}
    selectionRef="ref"
    small={false}
    title="description"
    value={true}
  />
  <CheckBox
    _id={2}
    checkboxProps={Object {}}
    className="tm-checkbox-transparent"
    disabled={false}
    excludeTmCheckboxClass={false}
    id="checkboxdescription-filterType-2"
    key="checkboxdescription-filterType-2"
    label="description"
    labelSrOnly={false}
    name="description"
    onChange={[Function]}
    onCheckBoxClick={[Function]}
    overrideLifecycle={false}
    selectionRef="ref"
    small={false}
    title="description"
    value={true}
  />
  <CheckBox
    _id={3}
    checkboxProps={Object {}}
    className="tm-checkbox-transparent"
    disabled={false}
    excludeTmCheckboxClass={false}
    id="checkboxdescription 2-filterType-3"
    key="checkboxdescription 2-filterType-3"
    label="description 2"
    labelSrOnly={false}
    name="description 2"
    onChange={[Function]}
    onCheckBoxClick={[Function]}
    overrideLifecycle={false}
    selectionRef="ref"
    small={false}
    title="description 2"
    value={true}
  />
</FieldSet>
`;

exports[`MultiSelectFilterComponent matches snapshot when groupAlpha is true 1`] = `
<FieldSet
  className=""
  key="title"
  legend="title"
  legendSrOnly={true}
>
  <div
    className="usa-grid-full term-group term-group-first"
    key="D"
  >
    <div
      className="term-title"
    >
      D
    </div>
    <CheckBox
      _id={1}
      checkboxProps={Object {}}
      className="tm-checkbox-transparent"
      disabled={false}
      excludeTmCheckboxClass={false}
      id="checkboxdescription-filterType-1"
      key="checkboxdescription-filterType-1"
      label="description"
      labelSrOnly={false}
      name="description"
      onChange={[Function]}
      onCheckBoxClick={[Function]}
      overrideLifecycle={false}
      selectionRef="ref"
      small={false}
      title="description"
      value={true}
    />
  </div>
  <div
    className="usa-grid-full term-group "
    key="A"
  >
    <div
      className="term-title"
    >
      A
    </div>
    <CheckBox
      _id={2}
      checkboxProps={Object {}}
      className="tm-checkbox-transparent"
      disabled={false}
      excludeTmCheckboxClass={false}
      id="checkboxdescription-filterType-2"
      key="checkboxdescription-filterType-2"
      label="description"
      labelSrOnly={false}
      name="description"
      onChange={[Function]}
      onCheckBoxClick={[Function]}
      overrideLifecycle={false}
      selectionRef="ref"
      small={false}
      title="description"
      value={true}
    />
  </div>
  <div
    className="usa-grid-full term-group "
    key="#"
  >
    <div
      className="term-title"
    >
      #
    </div>
    <CheckBox
      _id={3}
      checkboxProps={Object {}}
      className="tm-checkbox-transparent"
      disabled={false}
      excludeTmCheckboxClass={false}
      id="checkboxdescription 2-filterType-3"
      key="checkboxdescription 2-filterType-3"
      label="description 2"
      labelSrOnly={false}
      name="description 2"
      onChange={[Function]}
      onCheckBoxClick={[Function]}
      overrideLifecycle={false}
      selectionRef="ref"
      small={false}
      title="description 2"
      value={true}
    />
  </div>
</FieldSet>
`;
